<resources>
    <string name="app_name">Android Final Project</string>
    <string name="bear_app_name">Bear Image Generator</string>
    <string name="flight_app_name">Flight Tracker</string>
    <string name="currency_app_name">Currency Converter</string>
    <string name="trivia_app_name">Trivia Tester</string>
    <string name="welcome_msg">Welcome to our Android Suite</string>
    <string name="saved_flights_name">Saved Flights</string>
    <string name="flight_hint">Enter an airport code...</string>
    <string name="search_flight">Search</string>
    <string name="flight_joiner"> from </string>
    <string name="flight_flight">Flight </string>
    <string name="flight_des">Destination airport = </string>
    <string name="flight_gate">Gate = </string>
    <string name="flight_delay">Delay = </string>
    <string name="flight_ter">Terminal = </string>
    <string name="flight_add">Flight added to your saved flights.</string>
    <string name="flight_prompt">Would you like to remove this from your saved flights?</string>
    <string name="flight_question">Question:</string>
    <string name="flight_yes">Yes</string>
    <string name="flight_remove">Flight removed from your saved flights.</string>
    <string name="flight_no">No</string>
    <string name="flight_searching">Searching Airport </string>
    <string name="flight_invalid">Invalid airport code.</string>
    <string name="flight_help">To use this app, type an airport code into the searchbar. When you click the search button, a list of flights from that airport will appear, along with their destination airport. \n\nTo save a flight, click on one of the flights in the list, then click on the Add To Saved Flights button.\n\nTo view your saved flights, click on the three dots, then click on the View Saved Flights button.\n\nTo delete a saved flight, click on one of your saved flights, then click on the Remove From Saved Flights button.</string>
    <string name="flight_help_title">"How To Use The Flight Tracker"</string>
    <string name="flight_confirm">OK</string>
    <string name="flight_add_button">Add To Saved Flights</string>
    <string name="flight_remove_button">Remove From Saved Flights</string>
    <string name="flight_saved_button">View Saved Flights</string>
    <string name="flight_help_button">Help</string>
    <string name="Display_All"> Display All</string>
    <string name="Clear_All">Clear All</string>
    <string name="Convert">Convert</string>
    <string name="Delete">Delete</string>
    <string name="Save">Save</string>
    <string name="bear_h">Height (px)</string>
    <string name="bear_h_hint">Height</string>
    <string name="bear_w">Width (px)</string>
    <string name="bear_w_hint">Width</string>
    <string-array name="currency_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
    <string name="make_img">Generate Image</string>
    <string name="view_imgs">View All Images</string>
    <string name="save_img">Save Image</string>
    <string name="curr_img_text">Current Image:</string>
    <string name="save_to_db">SAVE TO DATABASE</string>
    <string name="delete">DELETE?</string>
    <string name="del_bear_sb">You deleted the image at position # </string>
    <string name="no_gen_bear_toast">Sorry, you haven\'t generated an image yet!</string>
    <string name="save_success_toast">Image added to database</string>
    <string name="size_in_bytes">The size of this image in bytes is </string>
    <string name="del_bear_alert">Do you want to delete this image: </string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="size_too_big_toast">Sorry! Height and/or width cannot exceed 5000. Try again.</string>
    <string name="provide_size_toast">You must supply a non-negative height and width</string>
    <string name="help_blurb">
        If you would like to make a new bear image, please type
        a width and height in the text fields, then click
        on &lt;i&gt;Generate Image&lt;/i&gt;.&lt;br&gt;&lt;/br&gt;&lt;b&gt;Height and/or width cannot exceed 5000.&lt;/b&gt;&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;
        If you would like to save the generated image, please click &lt;i&gt;Save Image&lt;/i&gt;.&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;
        If you would like to view all saved images, please click &lt;i&gt;View All Images.&lt;/i&gt;&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;
        &lt;u&gt;Within View All Images:&lt;/u&gt;&lt;br&gt;&lt;/br&gt;Tap any image to see additional details about it, or to be
        given the option to delete it from the list.
    </string>
    <string name="about_bear">About the Bear Image Generator</string>
    <string name="about_converter">about the Currency Converter</string>
    <string name="bear_menu_help">Help</string>
    <string name="help_currency">&lt;b&gt;How to Use the Currency Converter App:&lt;/b&gt;&lt;br&gt;&lt;br&gt;
&lt;b&gt;1. Select Currency:&lt;/b&gt;&lt;br&gt;
Choose the currencies for conversion.&lt;br&gt;&lt;br&gt;

&lt;b&gt;2. Perform Conversion:&lt;/b&gt;&lt;br&gt;
Click "Convert" to get the result.&lt;br&gt;&lt;br&gt;

&lt;b&gt;3. Save Conversion:&lt;/b&gt;&lt;br&gt;
Save the conversion for later.&lt;br&gt;&lt;br&gt;

&lt;b&gt;4. View Saved Conversions:&lt;/b&gt;&lt;br&gt;
See all saved conversions.&lt;br&gt;&lt;br&gt;

&lt;b&gt;5. Delete Saved Conversions:&lt;/b&gt;&lt;br&gt;
Remove conversions from the list.&lt;br&gt;&lt;br&gt;

&lt;b&gt;6. Update Conversion:&lt;/b&gt;&lt;br&gt;
Saved conversions will update automatically.&lt;br&gt;&lt;br&gt;

Enjoy using the Currency Converter!&lt;/string&gt;</string>
    <string name="select_category">Select a category</string>
    <string name="action_help">Help</string>
    <string name="submit">submit</string>
    <string name="enter_the_number_of_questions">enter the number of questions</string>
    <string name="category_1">catégorie1</string>
    <string name="category_2">catégorie2</string>
    <string name="Player_name">Player Name</string>
    <string name="Score">Score</string>
    <string name="Submit">Submit</string>


</resources>